# euler

./: .gitignore  EulerTestRunner.py  Fib.java  README.md
go/: README.md  config.go  go.mod
problems/: __init__.py  problem1.py  problem10.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem2.py  problem20.py  problem21.py  problem22.py  problem23.py  problem24.py  problem25.py  problem26.py  problem27.py  problem28.py  problem29.py  problem3.py  problem30.py  problem31.py  problem32.py  problem33.py  problem34.py  problem35.py  problem36.py  problem37.py  problem38.py  problem39.py  problem4.py  problem40.py  problem41.py  problem42.py  problem43.py  problem44.py  (+23 more)
python/: EulerTestRunner.py  README.md
rust/euler/: Cargo.toml  README.md
rust/euler/collatz/: Cargo.toml
rust/euler/fibonacci/: Cargo.toml
rust/euler/fibonacci/src/: lib.rs
rust/euler/mathex/: Cargo.toml
rust/euler/prime/: Cargo.toml
rust/euler/prime/src/: lib.rs  sieve.rs
rust/euler/src/: main.rs  problem.rs  problem001.rs  problem002.rs  problem003.rs  problem004.rs  problem005.rs  problem006.rs  problem007.rs  problem008.rs  problem009.rs  problem010.rs  problem1.rs  problem2.rs  problem3.rs
tests/: perf_problem7.py  test_fibonacci.py  test_iter.py  test_math.py  test_mathex.py  test_prime.py  test_problem1.py  test_problem13.py  test_problem14.py  test_problem15.py  test_problem16.py  test_problem17.py  test_problem18.py  test_problem19.py  test_problem2.py  test_problem20.py  test_problem21.py  (+38 more)
(+199 files in other folders)
