[package]
name = "euler"
version = "0.1.0"
authors = ["Mark Laffoon <laffoon@san.rr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0"
num = "0.3"
collatz = { path = "collatz" }
fibonacci = { path = "fibonacci" }
prime = { path = "prime" }